<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/sotiendatra"
        android:textColor="@color/mauTrang_Chu"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtSotien_dialogpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:weightSum="4">

        <Button
            android:id="@+id/btnDatra_dialogpayed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/datra"
            android:layout_weight="2"
            android:textStyle="bold"  />

        <Button
            android:id="@+id/btnDong_dialogpayed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/dong"  android:layout_weight="2"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>