<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="9"
            android:background="@color/GreenChuDe"
            android:gravity="center"
            android:orientation="vertical" >

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="5" >

                <Button
                    android:id="@+id/Back_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/docam"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/Back"
                    android:textColor="@color/mauTrang_Chu" />

                <TextView
                    android:id="@+id/tvTitel_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/mauTrang_Chu"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnThayDoi_chart"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:background="@color/docam"
                    android:gravity="center"
                    android:padding="1dp"
                    android:text="@string/thaydoi"
                    android:textColor="@color/mauTrang_Chu" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="6dp" >

            <TextView
                android:id="@+id/tvEmptyData_chart"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:hint="@string/emptyData" />

            <LinearLayout
                android:id="@+id/llayout_chart"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="4" >

                <LinearLayout
                    android:id="@+id/pie_container"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:orientation="vertical" >
                </LinearLayout>

                <ListView
                    android:id="@+id/listTheLoai_chart"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ads_id_banner" >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>