<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="15" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="15" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_weight="14"
            android:background="@color/GreenChuDe"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4" >

            <TableRow
                android:id="@+id/tableRow9"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:gravity="center" >

                <Button
                    android:id="@+id/Back_thuchi"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/docam"
                    android:gravity="center"
                    android:text="@string/Back"
                    android:textColor="@color/mauTrang_Chu" />

                <TextView
                    android:id="@+id/tvTitel_thuchi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="Add Item"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/mauTrang_Chu"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnKetqua"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/docam"
                    android:gravity="center"
                    android:text="@string/luu"
                    android:textColor="@color/mauTrang_Chu" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:weightSum="5" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvThuChi_thuchi"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:text="Trading name"
                    android:textStyle="bold"  />

                <AutoCompleteTextView
                    android:id="@+id/autoCpleditTenGiaoDich"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:padding="5dp"
                    android:textColor="@color/mauDen_No" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Amount of money"
                    android:textStyle="bold"  />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:weightSum="4" >

                    <EditText
                        android:id="@+id/edtSoTien"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:editable="false"
                        android:ems="10"
                        android:inputType="none"
                        android:text="0" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:hint="x1USD" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingRight="10dp"
                    android:text="@string/ngay" 
                    android:textStyle="bold" />
                <!-- ham de click show dialog -->

                <EditText
                    android:id="@+id/edtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:editable="false"
                    android:ems="10"
                    android:inputType="none"
                    android:padding="5dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:gravity="center" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:hint="@string/cothebotrong"
                    android:text="Note"
                    android:textStyle="bold"  />

                <EditText
                    android:id="@+id/edtGhiChu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/cothebotrong"
                    android:padding="5dp" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.5"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/theloai" 
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/linearlayout_thuchi"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    android:weightSum="5" >

                    <ImageView
                        android:id="@+id/ivtheloai_Icon_thuchi"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="4"
                        android:src="@drawable/safe_theloai" />

                    <TextView
                        android:id="@+id/tvTheLoai_thuchi"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:text="@string/phanloai"
                        android:textSize="18sp" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ads_id_banner" >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>