<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="7" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="6"
            android:orientation="vertical"
            android:weightSum="4" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:background="@color/GreenChuDe"
                android:weightSum="6" >

                <Button
                    android:id="@+id/btnBack_sono"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_weight="1"
                    android:background="@color/docam"
                    android:gravity="center"
                    android:text="@string/Back"
                    android:textColor="@color/mauTrang_Chu"
                    android:textSize="@dimen/size_tvSoThuChi" />

                <TextView
                    android:id="@+id/tvTenNguoiVayNo_sono"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:text="Pay book"
                    android:textColor="@color/mauTrang_Chu"
                    android:textSize="@dimen/sizeFontChude"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linnearlayoutTV_sono"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:weightSum="4" >

                <TextView
                    android:id="@+id/tvVay_sono"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:background="@color/mauCam_Vay"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/mauTrang_Chu"
                    android:textSize="@dimen/size_tvSoThuChi" />

                <TextView
                    android:id="@+id/tvNo_sono"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="2"
                    android:background="@color/mauDen_No"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/mauTrang_Chu"
                    android:textSize="@dimen/size_tvSoThuChi" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1" >

            <ListView
                android:id="@+id/listview_sono"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" >
            </ListView>

            <TextView
                android:id="@+id/tvEmpty_sono"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:hint="@string/emptyData"
                android:textSize="@dimen/sizeFontChude"
                android:textStyle="italic" />

            <!--
     <include
            android:layout_weight="1"
            layout="@layout/paper_emty" />
            -->

        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/ads_id_banner" >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>